@@ -1,3 +1,9 @@
+2010-06-11: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/Verifier.pm, Signer.pm, Algorithm/Base.pm
+   (finish_header): provide reference to entire list of headers at
+   completion of header, so that canonicalizers do not need to store
+   their own copy of the header
+
 2010-06-03: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Verifier.pm: prevent abuse- if a message has more than
    50 signatures headers, we start ignoring them (it's unreasonable for
